[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nil-clix"
version = "1.0.8.rc1"
description = "Python binding for nil/clix: an Opinionated Argument Parser"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "CC BY-NC-ND 4.0" }
keywords = [
    "nil",
    "cli",
    "commandline"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nil_clix*"]

[tool.setuptools.package-data]
nil_clix = ["libnil-clix-c-api.so"]
